--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "com.lampa.startapp",
+  "name": "com.max.deeplink",
   "version": "6.1.6",
-  "description": "Phonegap plugin for check or launch other application in android device.",
+  "description": "cordova plugin for check or launch other application in android device.",
   "cordova": {
-    "id": "com.lampa.startapp",
+    "id": "com.max.deeplink",
     "platforms": [
       "android",
       "ios"
@@ -11,23 +11,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lampaa/com.lampa.startapp.git"
+    "url": "git+https://github.com/Srini-max/deeplink-cordova-tst"
   },
   "keywords": [
     "cordova",
     "startapp",
-    "lampa",
-	"extra",
-	"extrafields",
-	"hasextra",
     "cordova",
     "cordova-android",
     "cordova-ios"
   ],
-  "author": "lampaa",
+  "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lampaa/com.lampa.startapp/issues"
-  },
-  "homepage": "https://github.com/lampaa/com.lampa.startapp#readme"
+  "homepage": "https://github.com/Srini-max/deeplink-cordova-tst"
 }
