--- a/plugin.xml
+++ b/plugin.xml
@@ -36,6 +36,11 @@
 		
 		<header-file src="src/ios/startApp.h"/>
 		<source-file src="src/ios/startApp.m"/>
+		 <config-file target="*-Info.plist" parent="LSApplicationQueriesSchemes">
+		    <array>
+			<string>Test</string>
+		    </array>
+		</config-file>
 	</platform>
 
 
