--- a/plugin.xml
+++ b/plugin.xml
@@ -40,6 +40,7 @@
 		    <array>
 			<string>Test</string>
 			<string>com.gems.gcapplepay</string>    
+		 	<string>com.gems.classroom</string>
 		    </array>
 		</config-file>
 	</platform>
