--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "6.1.6",
   "description": "cordova plugin for check or launch other application in android device.",
   "cordova": {
-    "id": "com.max.deeplink",
+    "id": "com.gems.deeplink",
     "platforms": [
       "android",
       "ios"
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Srini-max/deeplink-cordova-tst"
+    "url": "git+https://github.com/Srini-max/cordova-deeplink"
   },
   "keywords": [
     "cordova",
@@ -22,5 +22,5 @@
   ],
   "author": "",
   "license": "MIT",
-  "homepage": "https://github.com/Srini-max/deeplink-cordova-tst"
+  "homepage": "https://github.com/Srini-max/cordova-deeplink"
 }
