--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-	id="com.max.deeplink"
+	id="com.gems.deeplink"
 	version="6.1.6">
 
     <name>startApp</name>
@@ -17,12 +17,12 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="startApp">
-                <param name="android-package" value="com.max.deeplink.startApp"/>
+                <param name="android-package" value="com.gems.deeplink.startApp"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/startApp.java" target-dir="src/com/max/deeplink" />
-        <source-file src="src/android/Assets.java" target-dir="src/com/max/deeplink" />
+        <source-file src="src/android/startApp.java" target-dir="src/com/gems/deeplink" />
+        <source-file src="src/android/Assets.java" target-dir="src/com/gems/deeplink" />
         <source-file src="src/android/res/xml/file_paths.xml" target-dir="res/xml" />
     </platform>
 
