--- a/plugin.xml
+++ b/plugin.xml
@@ -39,7 +39,8 @@
 		 <config-file target="*-Info.plist" parent="LSApplicationQueriesSchemes">
 		    <array>
 			<string>zoomus</string>
-			<string>com.gems.gcapplepay</string>    
+			<string>com.gems.gcapplepay</string>
+			<string>zoomus</string>    
 		 	<string>com.gems.classroom</string>
 		    </array>
 		</config-file>
